WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251131
Some Books content is not fit-to-page, content is cropped out
https://bugs.webkit.org/show_bug.cgi?id=251131
Summary
Some Books content is not fit-to-page, content is cropped out
zalan
Reported
2023-01-24 20:33:49 PST
<
rdar://103584513
>
Attachments
[fast-cq]Patch
(2.62 KB, patch)
2023-01-24 20:36 PST
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-01-24 20:36:28 PST
Created
attachment 464643
[details]
[fast-cq]Patch
EWS
Comment 2
2023-01-25 06:13:13 PST
Committed
259349@main
(7056ba1e8d56): <
https://commits.webkit.org/259349@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464643
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug