Some Books content is not fit-to-page, content is cropped out https://bugs.webkit.org/show_bug.cgi?id=251131 <rdar://103584513>

Reviewed by Antti Koivisto.

Floats inside paginated content are not ready to be laid out using IFC. They need integration work (together with the rest of the multicolumn features).

* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):
(WebCore::LayoutIntegration::canUseForLineLayoutWithReason):

Canonical link: https://commits.webkit.org/259349@main